--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -67,19 +67,19 @@
   .jumbotron p{
     font-family: 'lato';
     font-weight: bold;
-    font-size: 18px;
+    font-size: 14px;
     text-transform: uppercase;
     color: white;
     text-align: center;
     margin-top: -220px;
-    margin-left: 60px;
+    margin-left: 75px;
     float: left;
     z-index: 1;
   }
   .joinus{
     font-family: 'lato';
     font-weight: bold;
-    font-size: 18px;
+    font-size: 14px;
     text-transform: uppercase;
     color: white;
     width: 180px;
@@ -95,7 +95,7 @@
   .tentang{
     font-family: 'lato';
     font-weight: bold;
-    font-size: 18px;
+    font-size: 14px;
     text-transform: uppercase;
     color: white;
     width: 180px;
@@ -104,7 +104,7 @@
     border-radius: 8px;
     padding: 3px 10px;
     margin-top: -150px;
-    margin-right: 40px;
+    margin-right: 50px;
     float: right;
   }
 
@@ -129,7 +129,7 @@
 
   .medsos .facebook{
     float: right;
-    margin-right: 460px;
+    margin-right: 470px;
     margin-top: -45px;
   } 
 
@@ -154,72 +154,110 @@
   /* Akhir Home */
 
   /* Profile */
-.isi{
-  background-color:#D6CBCB;
-  font-family: 'lato';
-  height: 1000px;
-  margin-top: -34px;
+  .isi{
+    background-color: #D6CBCB;
+    margin-top: -32px;
+    height: 800px;
+  }
+  .about{
+    width: 100%;
+  }
+  .about p{
+    /* background-color: aquamarine; */
+    text-align: justify;
+    padding: 10px 10px;
+    margin-left: 180px;
+    margin-right: 90px;
+    margin-top: 120px;
+    letter-spacing: 10%;
+  }
+  .about img{
+    width: 400px;
+    height: 400px;
+    margin-top: 50px;
+    display: block;
+    margin-left: 80px;
+    margin-right: 120px;
+  }
 
-}
-.container-satu{
-  display: flex;
-  justify-content: center;
-  padding-top: 50px;
-}
+  .viewdetail{
+    color: #9D5A06 ;
+    text-align: center;
+    font-family: 'lato';
+    font-size: 18px;
+    width: 170px;
+    height: 40px;
+    border: 3px solid #3D2120;
+    border-radius: 10px;
+    margin-left: 280px;
+  }
 
-.abot{
-  background-color: chocolate;
-  text-align: justify;
-  word-spacing: 8PX;
-  margin: 20px;
-  box-sizing: border-box;
-}
+  .viewdetail:hover{
+    background-color: #9D5A06;
+    color: white !important;
+  }
 
+  .teks{
+    text-align: center;
+    margin-top: 50px;
+  }
 
-.view_detail{
-  text-decoration: none;
-  color:#9D5A06 !important;
-  border: 2px solid #3D2120;
-  border-radius: 10px;
-  box-shadow: #9D5A06;
-  text-align: center;
-  margin-top: 20px;
-  margin-left: 140px;
-  word-spacing: normal;
-}
+  .teks h3{
+    color: #9D5A06;
+  }
 
-.view_detail:hover{
-  background: #9D5A06;
-  color: white !important;
-}
+  .visimisi{
+    display: flex;
+    justify-content: center;
+  }
 
-.imageprof img{
-  width: 350px;
-  height: 380px;
-  padding-top: 20px;
-}
+  .visi{
+    /* background-color: chartreuse; */
+    text-align: right;
+    box-sizing: border-box;
+    padding-top: 20px;
+    /* padding-left: 0px; */
+    /* padding: 20px 60px; */
+    margin-left: -240px;
+    margin-right: 60px;
+  }
+  
+  .misi{
+    /* background-color: cyan; */
+    padding-top: 20px;
+    padding-right: 60px;
+    margin-left: -40px;
+    /* margin-right: 320px; */
+    text-align: left;
+    box-sizing: border-box;
+  }
 
-/* .teksvisi{
-  text-align: center;
-} */
+  .misi p a{
+    text-decoration: none;
+    color: #3D2120;
+  }
 
-/* .contenvisimisi{
-  display: flex;
-  justify-content: center;
-} */
+  .misi p a:hover{
+    color: white !important;
+  }
 
-/* .visi{
-  background-color: #9d5a06;
-  text-align: right;
-  box-sizing: border-box;
-} */
-/* 
-.misi{
-  background-color: aqua;
-  text-align: left;
-  box-sizing: border-box;
-} */
+  #ornamen2{
+    width: 200px;
+    height: 230px;
+    margin-top: -190px;
+    margin-left: -30px;
+  }
   /* Akhir Profile */
+
+
+
+
+
+
+
+
+
+
 
   @media (max-width:576px){
     .logatas{
@@ -342,7 +380,67 @@
     }
     /* Akhir Home */
     
+    
     /* Profile */
+    .isi{
+      height: 1200px;
+    }
+    .about p{
+      padding: 5px 5px;
+      margin-left: 50px;
+      margin-right: 10px;
+      margin-top: 110px;
+      letter-spacing: 10%;
+    }
+    .about img{
+      width: 350px;
+      height: 350px;
+      margin-top: 20px;
+      display: block;
+      margin-left: 70px;
+      margin-right: 60px;
+    }
 
+    .viewdetail{
+      padding: 2px 0;
+      font-family: 'lato';
+      font-size: 16px;
+      width: 140px;
+      height: 35px;
+      border: 3px solid #3D2120;
+      border-radius: 10px;
+      margin-top: 10px;
+      margin-left: 170px;
+    }
+
+    .viewdetail:hover{
+      background-color: #9D5A06;
+      color: white !important;
+    }
+
+    .visimisi{
+      display: block;
+      margin: 20px 0;
+    }
+  
+    .visi{
+      background-color: #3D2120;
+      color: white;
+      text-align: center;
+      padding: 20px 20px;
+      margin: 10px 0;
+    }
+  
+    .misi{
+      background-color: #9D5A06;
+      text-align: center;
+      padding: 20px 0;
+      margin-left: auto;
+      margin: 20px 0;
+    }
+
+    #ornamen2{
+      display: none;
+    }
     /* Akhir Profile */
   }
