--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -854,6 +854,10 @@ margin-bottom: top;
     text-align: center;
     padding: 5px 5px;
   }
+
+  .sertifikat p{
+    margin-left: o;
+  }
       
   .box{
     margin-right: 0;
