--- a/public/css/produk1.css
+++ b/public/css/produk1.css
@@ -34,19 +34,27 @@ img {
   padding: -50px;
 }
 #wa {
+  margin-right: 2px;
+  margin-left: 15px;
+  margin-top: 2px;
   width: 35px;
   height: auto;
 }
 #toko {
+  margin-top: -1px;
+  margin-right: -15px;
   width: 35px;
   height: auto;
 }
 #sh {
+  margin-left: 10px;
+  margin-top: 2px;
   width: 55px;
-  height: auto;
+  height: 55px;
 }
 #bl {
-  margin-left: -10px;
+  margin-left: -15px;
+  margin-top: 8px;
   width: 55px;
-  height: auto;
+  height: 55px;
 }
