--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,13 +1,13 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-.logatas{
+.logatas {
   position: relative;
   z-index: 1;
   /* background-color: rgb(134, 240, 204); */
 }
-.logatas img{
+.logatas img {
   width: 280px;
   height: 70px;
   position: relative;
@@ -15,16 +15,16 @@
   margin-left: auto;
   margin-right: auto;
 }
-.logatas P{
-  font-family: 'Roboto';
+.logatas P {
+  font-family: "Roboto";
   font-weight: lighter;
   font-size: 18px;
   text-align: center;
   color: white;
 }
 
-.navbar{
-  font-family: 'lato';
+.navbar {
+  font-family: "lato";
   font-weight: normal;
   position: relative;
   margin-top: -17px;
@@ -33,28 +33,28 @@
   z-index: 1;
 }
 
-.nav-link{
-padding: 5px 0;
-margin: 0 10px;
-color: white !important;
+.nav-link {
+  padding: 5px 0;
+  margin: 0 10px;
+  color: white !important;
 }
 
-.nav-link:hover{
-  background-color:#D6CBCB;
-  color:#3D2120 !important;
+.nav-link:hover {
+  background-color: #d6cbcb;
+  color: #3d2120 !important;
   border-radius: 4px;
 }
 
 /* Home */
 
-.jumbotron{
+.jumbotron {
   height: 886px;
   margin-top: -150px;
   position: relative;
-  background: linear-gradient(#3D2120,#9D5A06);
+  background: linear-gradient(#3d2120, #9d5a06);
 }
 
-.jumbotron img{
+.jumbotron img {
   position: relative;
   width: 693px;
   height: 728px;
@@ -64,8 +64,8 @@ color: white !important;
   margin-top: 60px;
 }
 
-.jumbotron p{
-  font-family: 'lato';
+.jumbotron p {
+  font-family: "lato";
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
@@ -76,8 +76,8 @@ color: white !important;
   float: left;
   z-index: 1;
 }
-.joinus{
-  font-family: 'lato';
+.joinus {
+  font-family: "lato";
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
@@ -92,8 +92,8 @@ color: white !important;
   float: left;
 }
 
-.tentang{
-  font-family: 'lato';
+.tentang {
+  font-family: "lato";
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
@@ -108,32 +108,32 @@ color: white !important;
   float: right;
 }
 
-.medsos p{
+.medsos p {
   text-align: center;
   float: none;
   text-transform: lowercase;
   margin-top: -5px;
 }
 
-.medsos img{
+.medsos img {
   width: 30px;
   height: 30px;
   margin: auto;
 }
 
-.medsos .instagram{
+.medsos .instagram {
   float: left;
   margin-left: 460px;
   margin-top: -45px;
 }
 
-.medsos .facebook{
+.medsos .facebook {
   float: right;
   margin-right: 470px;
   margin-top: -45px;
-} 
+}
 
-.ornamen img{
+.ornamen img {
   float: left;
   width: 360px;
   height: 360px;
@@ -142,7 +142,7 @@ color: white !important;
   margin-top: -920px;
   margin-left: -220px;
 }
-.ornamen1 img{
+.ornamen1 img {
   float: right;
   width: 220px;
   height: 320px;
@@ -154,15 +154,15 @@ color: white !important;
 /* Akhir Home */
 
 /* Profile */
-.isi{
-  background-color: #D6CBCB;
+.isi {
+  background-color: #d6cbcb;
   margin-top: -40px;
   height: 800px;
 }
-.about{
+.about {
   width: 100%;
 }
-.about p{
+.about p {
   /* background-color: aquamarine; */
   text-align: justify;
   padding: 10px 10px;
@@ -171,7 +171,7 @@ color: white !important;
   margin-top: 120px;
   letter-spacing: 10%;
 }
-.about img{
+.about img {
   width: 400px;
   height: 400px;
   margin-top: 50px;
@@ -180,59 +180,59 @@ color: white !important;
   margin-right: 120px;
 }
 
-.viewdetail{
-  color: #9D5A06 ;
+.viewdetail {
+  color: #9d5a06;
   text-align: center;
-  font-family: 'lato';
+  font-family: "lato";
   font-size: 16px;
   width: 130px;
   height: 40px;
-  border: 3px solid #3D2120;
+  border: 3px solid #3d2120;
   border-radius: 10px;
   margin-left: 290px;
 }
 
-.viewdetail:hover{
-  background-color: #9D5A06;
+.viewdetail:hover {
+  background-color: #9d5a06;
   color: white !important;
 }
 
-.modal{
-  font-family: 'lato';
+.modal {
+  font-family: "lato";
   font-size: 16px;
   text-transform: uppercase;
 }
-.modal-header{
-  background-color:#3D2120;
+.modal-header {
+  background-color: #3d2120;
   color: white !important;
 }
 
-.modal-header h3{
+.modal-header h3 {
   text-align: center;
-  font-size: 20px
+  font-size: 20px;
 }
-.modal-body{
+.modal-body {
   padding: 20px 20px;
   text-align: justify;
-  background-color: #D6CBCB;
-  color: #9D5A06 !important;
+  background-color: #d6cbcb;
+  color: #9d5a06 !important;
   z-index: 1;
 }
 
-.teks{
+.teks {
   text-align: center;
 }
 
-.teks h3{
-  color: #9D5A06;
+.teks h3 {
+  color: #9d5a06;
 }
 
-.visimisi{
+.visimisi {
   display: flex;
   justify-content: center;
 }
 
-.visi{
+.visi {
   text-align: right;
   box-sizing: border-box;
   padding-top: 20px;
@@ -240,7 +240,7 @@ color: white !important;
   margin-right: 60px;
 }
 
-.misi{
+.misi {
   padding-top: 20px;
   padding-right: 60px;
   margin-left: -40px;
@@ -249,16 +249,16 @@ color: white !important;
   box-sizing: border-box;
 }
 
-.misi p a{
+.misi p a {
   text-decoration: none;
-  color: #3D2120;
+  color: #3d2120;
 }
 
-.misi p a:hover{
+.misi p a:hover {
   color: white !important;
 }
 
-#ornamen2{
+#ornamen2 {
   width: 200px;
   height: 230px;
   margin-top: -160px;
@@ -266,48 +266,47 @@ color: white !important;
 }
 /* Akhir Profile */
 
-
 /*Menu About*/
-.Mitrakepercayaan{
-  font-family: 'lato';
-  background-color: #D6CBCB;
+.Mitrakepercayaan {
+  font-family: "lato";
+  background-color: #d6cbcb;
   height: 800px;
   /* margin-top: 10px; */
   /* border: 10px solid #9D5A06;    */
 }
 
-.mitra1{
+.mitra1 {
   padding-top: 120px;
-  font-family: 'lato';
+  font-family: "lato";
   text-align: center;
   font-size: 20px;
   font-weight: normal;
-  color: #9D5A06;
-} 
-
-.mitra1 h4{
-  padding-bottom: 20px;
-  font-weight: bold;
-  color: #3D2120;
+  color: #9d5a06;
 }
 
-.mitra1 p{
+.mitra1 h4 {
+  padding-bottom: 20px;
+  font-weight: bold;
+  color: #3d2120;
+}
+
+.mitra1 p {
   padding: 5px 0;
   margin-left: 370px;
   margin-right: 370px;
   display: block;
 }
 
-.quotes{
+.quotes {
   padding-top: 20px;
-  font-family: 'lato';
+  font-family: "lato";
 }
 
-.quotes h4{
+.quotes h4 {
   font-size: 20px;
   font-weight: bold;
   background-color: #8b8989;
-  color: #3D2120;
+  color: #3d2120;
   border-radius: 9px;
   width: 420px;
   height: 35px;
@@ -319,23 +318,23 @@ color: white !important;
   margin-right: auto;
 }
 
-.mitra2{
+.mitra2 {
   padding-top: 30px;
-  font-family: 'lato';
+  font-family: "lato";
   text-align: center;
   font-size: 20px;
   font-weight: normal;
-  color: #9D5A06;
+  color: #9d5a06;
 }
 
-.mitra2 p{
+.mitra2 p {
   padding: 5px 0;
   margin-left: 370px;
   margin-right: 370px;
   display: block;
 }
 
-.ornamen-mid img{
+.ornamen-mid img {
   float: left;
   width: 500px;
   height: 490px;
@@ -344,7 +343,7 @@ color: white !important;
   margin-left: -160px;
   opacity: 80%;
 }
-.ornamen-mid1 img{
+.ornamen-mid1 img {
   float: right;
   width: 300px;
   height: 320px;
@@ -352,33 +351,33 @@ color: white !important;
   opacity: 80%;
 }
 
-.mid{
+.mid {
   margin-left: 620px;
   margin-top: 20px;
-  border: 3px solid #3D2120;
+  border: 3px solid #3d2120;
   border-radius: 8px;
   width: 100px;
   font-size: 16px;
-  color: #9D5A06;
+  color: #9d5a06;
 }
 
-.mid:hover{
-  background-color: #3D2120;
+.mid:hover {
+  background-color: #3d2120;
   color: white !important;
-  border: 3px solid #9D5A06;
+  border: 3px solid #9d5a06;
 }
 
 /*Akhir Menu About*/
 
 /* location */
-.lokasi-kongdjie{
+.lokasi-kongdjie {
   /* margin-top: 10px; */
-  background-color: #3D2120;
+  background-color: #3d2120;
   position: relative;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   height: 800px;
 }
-.display-4{
+.display-4 {
   color: white;
   text-transform: uppercase;
   font-size: 24px;
@@ -389,7 +388,7 @@ color: white !important;
   padding: 45px 0;
 }
 
-.backlog{
+.backlog {
   background-color: #593218;
   border: 5px solid white;
   max-width: 900px;
@@ -398,7 +397,7 @@ color: white !important;
   margin-right: auto;
 }
 
-.backlog .gambar{
+.backlog .gambar {
   width: 500px;
   height: 550px;
   opacity: 80%;
@@ -407,7 +406,7 @@ color: white !important;
   margin-right: auto;
 }
 
-.tekswilayah{
+.tekswilayah {
   text-decoration: none;
   margin-left: 220px;
   margin-right: 220px;
@@ -415,7 +414,7 @@ color: white !important;
   padding: 5px 0;
 }
 
-.wilayah1{
+.wilayah1 {
   text-decoration: none;
   display: block;
   padding: 5px 0;
@@ -423,163 +422,161 @@ color: white !important;
   text-align: left;
 }
 
-.wilayah1:hover{
+.wilayah1:hover {
   text-decoration: none;
-  color: #3D2120; 
+  color: #3d2120;
 }
 
-.wilayah2{
+.wilayah2 {
   text-decoration: none;
   display: block;
   padding: 5px 0;
   color: white;
-  text-align: right;   ;
+  text-align: right;
 }
 
-.wilayah2:hover{
+.wilayah2:hover {
   text-decoration: none;
-  color: #3D2120;
+  color: #3d2120;
 }
 /* Akhir Location */
 
 /* CONTACT */
-.contact{
-background-color: #9D5A06;
-height: 280px;
+.contact {
+  background-color: #9d5a06;
+  height: 280px;
 }
-.Halaman-Contact{
-font-family: lato;
-color: #3D2120 ;
-padding-top: 40px;
-font-size: 18px;
-font-weight: bold;
+.Halaman-Contact {
+  font-family: lato;
+  color: #3d2120;
+  padding-top: 40px;
+  font-size: 18px;
+  font-weight: bold;
 }
-.contact1{
-margin-left: 50px;
+.contact1 {
+  margin-left: 50px;
 }
 
-.contact1 img{
-width: 35px;
-height: 35px;
-margin-right: 20px;
+.contact1 img {
+  width: 35px;
+  height: 35px;
+  margin-right: 20px;
 }
 .contactmid {
-text-transform: uppercase;
-text-align: center;
-padding-bottom: 10px;
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 10px;
 }
 
-
 .col-sm .contactmid .cmid {
-color: #3D2120;
-display: block;
-text-decoration: none;
+  color: #3d2120;
+  display: block;
+  text-decoration: none;
 }
 
 .col-sm .contactmid .cmid:hover {
-color:white;
-text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
-#email{
-width: 35px;
-height: 26px;
+#email {
+  width: 35px;
+  height: 26px;
 }
-#mui{
-width: 80px;
-height: 77px;
-}
-
-#bpom{
-width: 80px;
-height: 80px;
+#mui {
+  width: 80px;
+  height: 77px;
 }
 
-.sertifikat img{
-width: 100px;
-height: 40px;
+#bpom {
+  width: 80px;
+  height: 80px;
 }
 
-.sertifikat p{
-margin-left: 140px;
+.sertifikat img {
+  width: 100px;
+  height: 40px;
 }
 
-.box{
-margin-right: 60px;
-background-color: #3D2120;
-opacity: 75%;
-border-radius: 10px;
-padding: 5px 20px;
+.sertifikat p {
+  margin-left: 140px;
 }
 
-.box img{
-margin: 0 10px;
+.box {
+  margin-right: 60px;
+  background-color: #3d2120;
+  opacity: 75%;
+  border-radius: 10px;
+  padding: 5px 20px;
+}
+
+.box img {
+  margin: 0 10px;
 }
 
 /* AKHIR CONTACT */
 
 /* Menu Footer */
-.footer{
-background-color: #3D2120 ;
-color: #9D5A06;
-font-family: 'lato';
-text-align: center  ;
-position: relative;
-width: 100%;
-height: 25px;
-margin-bottom: top;
+.footer {
+  background-color: #3d2120;
+  color: #9d5a06;
+  font-family: "lato";
+  text-align: center;
+  position: relative;
+  width: 100%;
+  height: 25px;
+  margin-bottom: top;
 }
 /* AKHIR FOOTER */
 
-
-@media (max-width:576px){
-  .logatas{
-    background-color: #3D2120;
+@media (max-width: 576px) {
+  .logatas {
+    background-color: #3d2120;
     padding: 4px;
   }
-  .logatas img{
+  .logatas img {
     width: 180px;
     height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .logatas P{
+  .logatas P {
     font-size: 12px;
     text-align: center;
     color: white;
   }
-  .navbar{
-    padding:10px 0;
-    background-color: #9D5A06;
+  .navbar {
+    padding: 10px 0;
+    background-color: #9d5a06;
     text-align: center;
   }
 
-  .nav-link:hover{
-    background-color: #3D2120;
+  .nav-link:hover {
+    background-color: #3d2120;
     color: white !important;
   }
 
   /* Home */
-  .jumbotron{
+  .jumbotron {
     height: 680px;
     margin-top: 0;
   }
 
-  .jumbotron img{
+  .jumbotron img {
     position: relative;
     margin-top: -20px;
     width: 340px;
     height: 360px;
     z-index: 1;
   }
-  .jumbotron p{
+  .jumbotron p {
     float: left;
     font-size: 16px;
     margin-top: 50px;
     margin-left: 165px;
   }
-  .joinus{
+  .joinus {
     border: 1px solid white;
     font-size: 12px;
     width: 130px;
@@ -590,12 +587,12 @@ margin-bottom: top;
     margin-top: 5px;
   }
 
-  .joinus:hover{
-    background-color: #3D2120;
+  .joinus:hover {
+    background-color: #3d2120;
     color: white !important;
   }
 
-  .tentang{
+  .tentang {
     float: right;
     font-size: 12px;
     width: 140px;
@@ -605,22 +602,21 @@ margin-bottom: top;
     margin-right: 154px;
   }
 
-  .tentang:hover{
-    background-color: #3D2120;
+  .tentang:hover {
+    background-color: #3d2120;
     color: white !important;
   }
 
-  .medsos p{
+  .medsos p {
     display: flex;
-    font-family: 'lato';
+    font-family: "lato";
     font-size: 16px;
     text-transform: lowercase;
     margin-left: 178px;
     margin-top: 25px;
-
   }
 
-  .medsos .instagram{
+  .medsos .instagram {
     float: left;
     width: 30px;
     height: 30px;
@@ -628,23 +624,23 @@ margin-bottom: top;
     margin-top: 20px;
   }
 
-  .medsos .facebook{
+  .medsos .facebook {
     float: right;
     width: 30px;
-    height: 30PX;
+    height: 30px;
     margin-right: 130px;
-    margin-top: 20PX;
-  } 
+    margin-top: 20px;
+  }
 
-  .ornamen img{
+  .ornamen img {
     display: block;
-    position:absolute;
+    position: absolute;
     width: 180px;
     height: 180px;
     margin-left: -50px;
     margin-top: -380px;
   }
-  .ornamen1 img{
+  .ornamen1 img {
     display: block;
     width: 120px;
     height: 180px;
@@ -652,20 +648,19 @@ margin-bottom: top;
     margin-right: -15px;
   }
   /* Akhir Home */
-  
-  
+
   /* Profile */
-  .isi{
+  .isi {
     height: 1200px;
   }
-  .about p{
+  .about p {
     padding: 5px 5px;
     margin-left: 50px;
     margin-right: 10px;
     margin-top: 110px;
     letter-spacing: 10%;
   }
-  .about img{
+  .about img {
     width: 350px;
     height: 350px;
     margin-top: 20px;
@@ -675,38 +670,38 @@ margin-bottom: top;
     font-size: 16px;
   }
 
-  .viewdetail{
+  .viewdetail {
     padding: 2px 0;
-    font-family: 'lato';
+    font-family: "lato";
     font-size: 16px;
     width: 140px;
     height: 35px;
-    border: 3px solid #3D2120;
+    border: 3px solid #3d2120;
     border-radius: 10px;
     margin-top: 10px;
     margin-left: 170px;
   }
 
-  .viewdetail:hover{
-    background-color: #9D5A06;
+  .viewdetail:hover {
+    background-color: #9d5a06;
     color: white !important;
   }
 
-  .visimisi{
+  .visimisi {
     display: block;
     margin: 20px 0;
   }
 
-  .visi{
-    background-color: #3D2120;
+  .visi {
+    background-color: #3d2120;
     color: white;
     text-align: center;
     padding: 20px 20px;
     margin: 10px 0;
   }
 
-  .misi{
-    background-color: #9D5A06;
+  .misi {
+    background-color: #9d5a06;
     text-align: center;
     padding: 20px 0;
     margin-left: auto;
@@ -714,35 +709,35 @@ margin-bottom: top;
     font-size: 16px;
   }
 
-  #ornamen2{
+  #ornamen2 {
     display: none;
   }
   /* Akhir Profile */
 
   /* Menu About */
-  .Mitrakepercayaan{
-    font-family: 'lato';
-    background-color: #D6CBCB;
+  .Mitrakepercayaan {
+    font-family: "lato";
+    background-color: #d6cbcb;
     height: 670px;
     padding-top: 0;
     /* border: 10px solid #9D5A06;    */
   }
 
-  .mitra1{
+  .mitra1 {
     padding-top: 50px;
-    font-family: 'lato';
+    font-family: "lato";
     text-align: center;
     font-size: 16px;
     font-weight: normal;
-    color: #9D5A06;
-  } 
+    color: #9d5a06;
+  }
 
-  .mitra1 h4{
+  .mitra1 h4 {
     font-size: 18px;
     padding-bottom: 16px;
   }
 
-  .mitra1 p{
+  .mitra1 p {
     font-size: 16px;
     padding: 5px 0;
     margin-left: 50px;
@@ -750,19 +745,19 @@ margin-bottom: top;
     display: block;
   }
 
-  .quotes{
+  .quotes {
     padding-top: 18px;
   }
 
-  .quotes h4{
+  .quotes h4 {
     font-size: 16px;
     width: 320px;
     height: 30px;
   }
-  .mitra2{
+  .mitra2 {
     padding-top: 20px;
   }
-  .mitra2 p{
+  .mitra2 p {
     font-size: 16px;
     padding: 5px 0;
     margin-left: 30px;
@@ -770,7 +765,7 @@ margin-bottom: top;
     display: block;
   }
 
-  .ornamen-mid img{
+  .ornamen-mid img {
     display: none;
     /* float: left;
     width: 190px;
@@ -778,11 +773,11 @@ margin-bottom: top;
     margin-top: -450px;
     margin-left: -60px; */
   }
-  .ornamen-mid1 img{
+  .ornamen-mid1 img {
     display: none;
   }
 
-  .mid{
+  .mid {
     margin-left: 0;
     text-align: center;
     padding: 2px 0;
@@ -794,19 +789,19 @@ margin-bottom: top;
   /* Akhir Menu About */
 
   /* Menu Location */
-  .display-4{
+  .display-4 {
     font-size: 16px;
     padding-top: -10px;
     padding-bottom: 10px;
   }
 
-  .backlog{
-    border: 1px solid white; 
+  .backlog {
+    border: 1px solid white;
     max-width: 450px;
     height: 600px;
   }
 
-  .backlog .gambar{
+  .backlog .gambar {
     width: 400px;
     height: 450px;
     opacity: 80%;
@@ -816,37 +811,37 @@ margin-bottom: top;
     margin-right: auto;
   }
 
-  .tekswilayah{
+  .tekswilayah {
     font-size: 16px;
     margin-left: 0;
     margin-right: 0;
     margin-top: -570px;
     padding: 5px 0;
-  }    
+  }
   /* Akhir Location */
 
   /* Menu Contact */
-  .contact{
+  .contact {
     display: block;
     height: 600px;
     padding-top: 10px;
   }
 
-  .contactmid .cmid{
+  .contactmid .cmid {
     text-align: center;
     display: block;
   }
 
-  #email{
+  #email {
     width: 35px;
     height: 26px;
   }
-  #mui{
+  #mui {
     width: 80px;
     height: 77px;
   }
-  
-  #bpom{
+
+  #bpom {
     width: 80px;
     height: 80px;
   }
@@ -855,18 +850,18 @@ margin-bottom: top;
     padding: 5px 5px;
   }
 
-  .sertifikat p{
+  .sertifikat p {
     margin-left: o;
   }
-      
-  .box{
+
+  .box {
     margin-right: 0;
-    background-color: #3D2120;
+    background-color: #3d2120;
     opacity: 75%;
     padding: 5px 0;
   }
-  
-  .box img{
+
+  .box img {
     margin: 0 10px;
   }
   /* Akhir Menu COntact */
