--- a/public/css/produk1.css
+++ b/public/css/produk1.css
@@ -1,6 +1,6 @@
 img {
   width: 170px;
-  height: auto;
+  height: 169;
 }
 .card-title {
   text-align: center;
@@ -15,13 +15,17 @@ img {
   display: none;
   padding-left: 10px;
   padding-right: 10px;
+  padding-bottom: px;
   margin-top: 30px;
   margin-bottom: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .card-body {
-  margin-left: -10px;
-  margin-right: -10px;
-  margin-bottom: 5px;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: -5px;
+  margin-top: -5px;
 }
 .card-bg {
   padding: 10px;
@@ -30,30 +34,35 @@ img {
 }
 .box {
   background-color: white;
+  margin-top: -10px;
+  margin-bottom: 10px;
   border-radius: 5px;
-  padding: -25px;
+  padding: 0px;
+  margin-right: 0px;
 }
 #wa {
-  margin-right: 2px;
-  margin-left: 15px;
+  margin-left: 12px;
+  margin-right: -5px;
   margin-top: 2px;
   width: 35px;
   height: auto;
 }
 #toko {
   margin-top: -1px;
-  margin-right: -15px;
+  margin-right: -17px;
+  margin-left: 10px;
   width: 35px;
   height: auto;
 }
 #sh {
-  margin-left: 10px;
+  margin-left: 16px;
   margin-top: 2px;
   width: 55px;
   height: 55px;
 }
 #bl {
-  margin-left: -50px;
+  margin-left: -22px;
+  margin-right: -50px;
   margin-top: 8px;
   width: 55px;
   height: 55px;
