--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -2,12 +2,7 @@
   margin: 0;
   padding: 0;
 }
-<<<<<<< HEAD
-
-.logatas{
-=======
 .logatas {
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   position: relative;
   z-index: 1;
   /* background-color: rgb(134, 240, 204); */
@@ -33,10 +28,9 @@
   font-weight: normal;
   /* position: relative; */
   margin-top: -17px;
-  background-color:#59321891;
+  background-color: #59321891;
   text-transform: uppercase;
   z-index: 1;
-  
 }
 
 .nav-link {
@@ -129,11 +123,11 @@
 
 .medsos .instagram {
   float: left;
-  margin-left: 460px;
   margin-top: -45px;
 }
 
 .medsos .facebook {
+  margin-left: 460px;
   float: right;
   margin-right: 470px;
   margin-top: -45px;
@@ -160,17 +154,6 @@
 /* Akhir Home */
 
 /* Profile */
-<<<<<<< HEAD
-.profile{
-  background-color: #D6CBCB;
-  padding: 50px 0;
-  margin-top: -32px;
-  font-family: 'lato';
-  font-weight: bold;
-}
-
-.profile P{
-=======
 .isi {
   background-color: #d6cbcb;
   margin-top: -40px;
@@ -181,38 +164,16 @@
 }
 .about p {
   /* background-color: aquamarine; */
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   text-align: justify;
 }
-<<<<<<< HEAD
-
-.profile  h3{
-  margin: 20px 0;
-}
-
-.paragraf{
-  font-weight: normal;
-  color: #3D2120;
-  font-size: 20px;
-=======
 .about img {
   width: 400px;
   height: 400px;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   margin-top: 50px;
 }
 
-<<<<<<< HEAD
-.gambarprofile{
-  width: 400px;
-  height: 400px;
-}
-.viewdetail{
-  color: #9D5A06 ;
-=======
 .viewdetail {
   color: #9d5a06;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   text-align: center;
   font-family: "lato";
   font-size: 16px;
@@ -242,21 +203,6 @@
   text-align: center;
   font-size: 20px;
 }
-<<<<<<< HEAD
-
-.vm h3{
-  font-size: 28px;
-  font-weight: bold;
-  color: #593218;
-}
-
-.vm hr{
-  text-align: center;
-  border: 2px solid #3D2120;
-}
-
-.visi p{
-=======
 .modal-body {
   padding: 20px 20px;
   text-align: justify;
@@ -279,20 +225,15 @@
 }
 
 .visi {
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   text-align: right;
-  color: #9D5A06;
+  color: #9d5a06;
 }
 
-<<<<<<< HEAD
-.misi a{
-=======
 .misi {
   padding-top: 20px;
   padding-right: 60px;
   margin-left: -40px;
   /* margin-right: 320px; */
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   text-align: left;
 }
 
@@ -301,13 +242,8 @@
   color: #3d2120;
 }
 
-<<<<<<< HEAD
-.misi p a:hover{
-  color: #9D5A06 !important;
-=======
 .misi p a:hover {
   color: white !important;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
 }
 
 #ornamen2 {
@@ -417,85 +353,12 @@
 .mid:hover {
   background-color: #3d2120;
   color: white !important;
-<<<<<<< HEAD
-=======
   border: 3px solid #9d5a06;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
 }
 
 /*Akhir Menu About*/
 
 /* location */
-<<<<<<< HEAD
-.lokasi-kongdjie{
-/* margin-top: 10px; */
-background-color: #3D2120;
-position: relative;
-font-family: 'Roboto';
-height: 800px;
-}
-.display-4{
-color: white;
-text-transform: uppercase;
-font-size: 24px;
-font-weight: bold;
-margin-bottom: 30px;
-text-align: center;
-/* background-color: aliceblue; */
-padding: 45px 0;
-}
-
-.backlog{
-background-color: #593218;
-border: 5px solid white;
-max-width: 900px;
-display: block;
-margin-left: auto;
-margin-right: auto;
-}
-
-.backlog .gambar{
-width: 500px;
-height: 550px;
-opacity: 80%;
-display: block;
-margin-left: auto;
-margin-right: auto;
-}
-
-.tekswilayah{
-text-decoration: none;
-margin-left: 220px;
-margin-right: 220px;
-margin-top: -555px;
-padding: 5px 0;
-}
-
-.wilayah1{
-text-decoration: none;
-display: block;
-padding: 5px 0;
-color: white;
-text-align: left;
-}
-
-.wilayah1:hover{
-text-decoration: none;
-color: #3D2120; 
-}
-
-.wilayah2{
-text-decoration: none;
-display: block;
-padding: 5px 0;
-color: white;
-text-align: right;   ;
-}
-
-.wilayah2:hover{
-text-decoration: none;
-color: #3D2120;
-=======
 .lokasi-kongdjie {
   /* margin-top: 10px; */
   background-color: #3d2120;
@@ -564,18 +427,10 @@ color: #3D2120;
 .wilayah2:hover {
   text-decoration: none;
   color: #3d2120;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
 }
 /* Akhir Location */
 
-
 /* CONTACT */
-<<<<<<< HEAD
-.contact{
-background-color: #9D5A06;
-/* height: 280px; */
-padding: 30px 0;
-=======
 .contact {
   background-color: #9d5a06;
   height: 280px;
@@ -589,7 +444,6 @@ padding: 30px 0;
 }
 .contact1 {
   margin-left: 50px;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
 }
 
 .contact1 img {
@@ -598,32 +452,13 @@ padding: 30px 0;
   margin-right: 20px;
 }
 
-.contact1 p{
-font-family: 'lato';
-font-weight: bold;
-padding: 5px 0;
+.contact1 p {
+  font-family: "lato";
+  font-weight: bold;
+  padding: 5px 0;
 }
 
 .contactmid {
-<<<<<<< HEAD
-text-transform: uppercase;
-text-align: center;
-font-family: 'lato';
-font-weight: bold;
-}
-
-
-.contactmid a {
-color: #3D2120;
-display: block;
-text-decoration: none;
-padding: 5px 0;
-}
-
-.contactmid a:hover {
-color:white;
-text-decoration: none;
-=======
   text-transform: uppercase;
   text-align: center;
   padding-bottom: 10px;
@@ -638,23 +473,15 @@ text-decoration: none;
 .col-sm .contactmid .cmid:hover {
   color: white;
   text-decoration: none;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
 }
 
 #email {
   width: 35px;
   height: 26px;
 }
-<<<<<<< HEAD
-
-#mui{
-width: 80px;
-height: 77px;
-=======
 #mui {
   width: 80px;
   height: 77px;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
 }
 
 #bpom {
@@ -662,27 +489,6 @@ height: 77px;
   height: 80px;
 }
 
-<<<<<<< HEAD
-.sertifikat img{
-width: 100px;
-height: 40px;
-margin: 0 5px;
-}
-
-.sertifikat p{
-text-align: center;
-font-family: 'lato';
-font-weight: bold;
-}
-
-.box{
-background-color: #3D2120;
-opacity: 75%;
-border-radius: 10px;
-padding: 5px 20px;
-}
-
-=======
 .sertifikat img {
   width: 100px;
   height: 40px;
@@ -703,7 +509,6 @@ padding: 5px 20px;
 .box img {
   margin: 0 10px;
 }
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
 
 /* AKHIR CONTACT */
 
@@ -841,21 +646,6 @@ padding: 5px 20px;
   /* Akhir Home */
 
   /* Profile */
-<<<<<<< HEAD
-  .profile{
-    font-weight: normal;
-    padding: 20px 0;
-  }
-
-  .paragraf{
-    font-size: 18px;
-  }
-
-  .profile img{
-    width: 320px;
-    height: 320px;
-    margin: 20px 0;
-=======
   .isi {
     height: 1200px;
   }
@@ -874,7 +664,6 @@ padding: 5px 20px;
     margin-left: 70px;
     margin-right: 60px;
     font-size: 16px;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   }
 
   .viewdetail {
@@ -893,19 +682,6 @@ padding: 5px 20px;
     color: white !important;
   }
 
-<<<<<<< HEAD
-  .profile h3{
-    margin: 10px o;
-  }
-  
-  .visi{
-    background-color: #3D2120;
-    margin-bottom: 10px;
-  }
-  
-  .visi p{
-    margin: 20px 0;
-=======
   .visimisi {
     display: block;
     margin: 20px 0;
@@ -914,35 +690,24 @@ padding: 5px 20px;
   .visi {
     background-color: #3d2120;
     color: white;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
     text-align: center;
     font-weight: bold;
     font-size: 14px;
   }
 
-<<<<<<< HEAD
-  .misi{
-    background-color: #9D5A06;
-    font-weight: bold;
-    padding: 10px 0;
-  }
-
-  .misi p{
-=======
   .misi {
     background-color: #9d5a06;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
     text-align: center;
     margin: 10px 0;
     font-size: 14px;
   }
 
-  .misi p a{
+  .misi p a {
     text-decoration: none;
-    color: #3D2120;
+    color: #3d2120;
   }
 
-  .misi p a:hover{
+  .misi p a:hover {
     color: #593218 !important;
   }
 
@@ -952,17 +717,10 @@ padding: 5px 20px;
   /* Akhir Profile */
 
   /* Menu About */
-<<<<<<< HEAD
-  .Mitrakepercayaan{
-    font-family: 'lato';
-    background-color: #D6CBCB;
-    height: 750px;
-=======
   .Mitrakepercayaan {
     font-family: "lato";
     background-color: #d6cbcb;
     height: 670px;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
     padding-top: 0;
   }
 
@@ -980,13 +738,8 @@ padding: 5px 20px;
     padding-bottom: 10px;
   }
 
-<<<<<<< HEAD
-  .mitra1 p{
-    font-size: 18px;
-=======
   .mitra1 p {
     font-size: 16px;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
     padding: 5px 0;
     margin-left: 30px;
     margin-right: 30px;
@@ -1005,13 +758,8 @@ padding: 5px 20px;
   .mitra2 {
     padding-top: 20px;
   }
-<<<<<<< HEAD
-  .mitra2 p{
-    font-size: 18px;
-=======
   .mitra2 p {
     font-size: 16px;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
     padding: 5px 0;
     margin-left: 30px;
     margin-right: 30px;
@@ -1035,41 +783,6 @@ padding: 5px 20px;
   }
   /* Akhir Menu About */
 
-<<<<<<< HEAD
-/* Menu Location */
-.display-4{
-  font-size: 16px;
-  padding-top: -10px;
-  padding-bottom: 10px;
-}
-
-.backlog{
-  border: 1px solid white; 
-  max-width: 450px;
-  height: 600px;
-}
-
-.backlog .gambar{
-  width: 400px;
-  height: 450px;
-  opacity: 80%;
-  display: block;
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.tekswilayah{
-  font-size: 16px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: -570px;
-  padding: 8px 0;
-}    
-/* Akhir Location */
-
-  /* Menu Contact */
-=======
   /* Menu Location */
   .display-4 {
     font-size: 16px;
@@ -1127,17 +840,11 @@ padding: 5px 20px;
     width: 80px;
     height: 80px;
   }
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   .sertifikat {
     text-align: center;
     padding: 5px 5px;
   }
 
-<<<<<<< HEAD
-
-  .box{
-    background-color: #3D2120;
-=======
   .sertifikat p {
     margin-left: o;
   }
@@ -1145,20 +852,12 @@ padding: 5px 20px;
   .box {
     margin-right: 0;
     background-color: #3d2120;
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
     opacity: 75%;
     margin: 10px 0;
   }
-<<<<<<< HEAD
-  
-  .box img{
-    margin: 0 15px;
-  } 
-=======
 
   .box img {
     margin: 0 10px;
   }
->>>>>>> eac0d1dc7d85d57c86007f29b3d221ced1f34f1d
   /* Akhir Menu COntact */
 }
