--- a/public/css/produk1.css
+++ b/public/css/produk1.css
@@ -21,6 +21,13 @@ img {
   margin-left: 50px;
   margin-right: 50px;
 }
+.card img {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 200px;
+}
 .card-body {
   margin-left: -15px;
   margin-right: -15px;
